Add geforce-experience and refactor

--- a/packages.config
+++ b/packages.config
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <packages>
-	<package id="googlechrome" version="111.0.5563.65"/>
-	<package id="firefox" version="111.0"/>
-	<package id="vcredist140" version="14.34.31938"/>
-	<package id="virtualbox" version="7.0.6.20230201"/>
-	<package id="vagrant" version="2.3.4"/>
-	<package id="mobaxterm" version="23.0.0"/>
-	<package id="bitwarden" version="2023.2.0"/>
-	<package id="vscode" version="1.76.2"/>
-	<package id="notepadplusplus" version="8.5"/>
-	<package id="peazip" version="9.1.0"/>
-	<package id="protonvpn" version="2.3.2"/>
-	<package id="python" version="3.11.0"/>
-	<package id="spotify" version="1.2.7.1277"/>
-	<package id="steam" version="2.10.91.91221129"/>
-	<package id="ubisoft-connect" version="139.2.0.10843"/>
-	<package id="vlc" version="3.0.18"/>
-	<package id="wireguard" version="0.5.3"/>
-	<package id="openssh" version="8.0.0.1"/>
-	<package id="wsl" version="1.0.1"/>
+	<package id="vcredist140"/>
+	<package id="googlechrome"/>
+	<package id="firefox"/>
+	<package id="virtualbox"/>
+	<package id="vagrant"/>
+	<package id="mobaxterm"/>
+	<package id="bitwarden"/>
+	<package id="vscode"/>
+	<package id="notepadplusplus"/>
+	<package id="peazip"/>
+	<package id="protonvpn"/>
+	<package id="python3"/>
+	<package id="spotify"/>
+	<package id="steam"/>
+	<package id="ubisoft-connect"/>
+	<package id="vlc"/>
+	<package id="wireguard"/>
+	<package id="openssh"/>
+	<package id="wsl"/>
+	<package id="geforce-experience"/>
 </packages>
