Fix jellyfin client packge name

--- a/packages.config
+++ b/packages.config
@@ -20,5 +20,5 @@
 	<package id="openssh"/>
 	<package id="wsl"/>
 	<package id="geforce-experience"/>
-	<package id="jellyfin"/>
+	<package id="jellyfin-media-player"/>
 </packages>
