Add sudo package

--- a/packages.config
+++ b/packages.config
@@ -21,4 +21,5 @@
 	<package id="wsl"/>
 	<package id="geforce-experience"/>
 	<package id="jellyfin-media-player"/>
+	<package id="sudo"/>
 </packages>
