--- a/packages.config
+++ b/packages.config
@@ -18,7 +18,7 @@
 	<package id="vlc"/>
 	<package id="wireguard"/>
 	<package id="openssh"/>
-	<package id="wsl"/>
+	<package id="wsl2"/>
 	<package id="geforce-experience"/>
 	<package id="jellyfin-media-player"/>
 	<package id="sudo"/>
